--- a/cervantes/templates/includes/navbar.html
+++ b/cervantes/templates/includes/navbar.html
@@ -19,7 +19,25 @@
                             <path
                                 d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z">
                             </path>
-                        </svg>&nbsp;Carrito</a></li>
+                        </svg>&nbsp;Carrito</a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="{% url 'user:logout' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item " href="#">Ver Perfil</a>
+                            <a class="dropdown-item " href="#">Mis Reservas</a>
+                            <a class="dropdown-item " href="#">Salir</a>
+                        </div>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url 'user:login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url 'user:register' %}">Registrarse</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
