--- a/cervantes/templates/base.html
+++ b/cervantes/templates/base.html
@@ -9,8 +9,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/styles.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/untitled-1.css' %}">    
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/untitled.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/untitled-1.css' %}">
 
     {% block mboostrap %}
 
@@ -28,9 +27,8 @@
     {% block contenido %}
     {% endblock %}
 
-
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'assets/js/script.min.js' %}"></script>
     {% include "includes/toast.html" %}
     {% block scripts %}
     {% endblock %}
