--- a/cervantes/templates/dashboard/cart_with_book.html
+++ b/cervantes/templates/dashboard/cart_with_book.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block estilos %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'assets/css/form.css' %}">
 {% endblock %}
 
 {% block contenido %}
@@ -10,34 +12,54 @@
     {% include "includes/navbar.html" %}    
 
 
-    
-    {% for book in book%}
-
     <section class="page-section cta">
-        <div class="container">
-            <h1>¿Desea adquirir el siguiente libro?</h1>
-                <div class="mt-2 cart">
-                    <div class="ref-media ">
-                        <div class="ref-preview"><img class="ref-image active mt-2" src="{{book.img.url}}" data-reflow-preview-type="image" /></div>
-                    </div>
-                    <div>
-                        <h2 class="mt-3">{{book.title}}</h2>
-                        <div ><span></span></div><strong >Precio: <s>{{high_price}} Gs</s> || {{book.price}} Gs</strong><span>
-                            <div class="mt-3">
-                                <a class="btn btn-success" id="abrirModal" href="/form/{{book.id}}">Adquirir</a>
-                                <a class="btn btn-danger" href="/books">Cancelar</a>
-                            </div>
-                        </span>
-                        <div class="mt-3"></div>
-                    </div>
+            <div class="container">
+                <div class="text-end mb-4 ">
+                <h1>Carrito de Compras</h1>
                 </div>
-        </div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col-5"><h5>Libro</h5></th>
+                        <th scope="col-2"><h5>Precio</h5></th>
+                        <th scope="col-2"><h5>Cantidad</h5></th>
+                        <th scope="col-3"><h5>Total</h5></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for object in books%}
+                    {%for book in object%}
+                    <tr>
+                        <th scope="row">
+                            <div class="ref-preview flex">
+                                <img class="ref-image active mt-2 form-img" src="{{book.img.url}}" data-reflow-preview-type="image" />
+                                <div class="ms-2">
+                                    <p class="mt-3">Libro: {{book.title}}</p>
+                                    <p class="mt-3">Categoria: {{book.category}}</p>
+                                </div>
+                            </div>
+                        </th>
+                        <td><h5 class="mt-3">{{book.price}}</h5></td>
+                        <td> <input id="price" class="form-control" type="number" name="price" value="1" readonly/></td>
+                        <td><h5 class="mt-3">{{book.price}}</h5></td>
+                    </tr>
+                    {% endfor %}
+                    {% endfor %}
 
+                </tbody>
+            </table>
+
+            <div class="mt-3">
+                <a class="btn btn-success" id="abrirModal" href="">Adquirir</a>
+                <div class="text-end">
+                <a class="btn btn-danger" href="/books">Cancelar</a>
+                </div>
+            </div>
+
+            </div>
     </section>
 
-
     
-    {% endfor %}
     {% include "includes/footer.html" %}
 
 {% endblock %}
