--- a/cervantes/templates/dashboard/cart_with_book.html
+++ b/cervantes/templates/dashboard/cart_with_book.html
@@ -28,13 +28,13 @@
                 </thead>
                 <tbody>
                     {% for object in books%}
-                    {%for book in object%}
+                    {%for book in book%}
                     <tr>
                         <th scope="row">
                             <div class="ref-preview flex">
                                 <img class="ref-image active mt-2 form-img" src="{{book.img.url}}" data-reflow-preview-type="image" />
                                 <div class="ms-2">
-                                    <p class="mt-3">Libro: {{book.title}}</p>
+                                    <p class="mt-3">Libro: {{b.title}}</p>
                                     <p class="mt-3">Categoria: {{book.category}}</p>
                                 </div>
                             </div>
