--- a/cervantes/templates/dashboard/books_speciality.html
+++ b/cervantes/templates/dashboard/books_speciality.html
@@ -14,67 +14,51 @@
     <section class="page-section cta">
         <div class="container">
 
-            {% for category in categories%}
+            <div>
+                <h1 class="fw-bold white mt-1 mb-">Libros de {{category.name}}</h1>
+            </div>
 
-                <div>
-                    <h1 class="fw-bold white mt-1 mb-">{{category.name}}</h1>
-                </div>
-
-                <div class="card-group mt-3 mb-3">
-                    {% for book in category.books.all %}
-                        <div class="col-4">
-                            <div class="card h-80 me-3 pt-3 mt-5">
-                                <img class="card-img-top j-100 h-50 d-block img_card mb-2" src="{{book.img.url}}" />
-                                <div class="card-body">
-                                    <h4 class="card-title">{{book.title}}</h4>
-                                    <p class="card-text text-nowrap overflow-hidden text-truncate" style="max-width:100%;">
-                                        {{book.description}}</p>
-                                    <a href="/cart/{{book.id}}/" class="btn btn-success" type="button">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                                             viewBox="0 0 16 16" class="bi bi-cart"
-                                             style="width: 20px;height: 20px;font-size: 15px;">
-                                            <path
-                                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z">
-                                            </path>
-                                        </svg>
-                                        Ordenar</a>
-                                    <button class="btn btn-primary btn-detail" data-toggle="modal" data-target="#bookModal"
-                                            data-id="{{ book.id }}">Detalles</button>
-                                </div>
+            <div class="card-group mt-3 mb-3">
+                {% for book in books_page %}
+                    <div class="col-4">
+                        <div class="card h-80 me-3 pt-3 mt-5">
+                            <img class="card-img-top j-100 h-50 d-block img_card mb-2" src="{{book.img.url}}" />
+                            <div class="card-body">
+                                <h4 class="card-title">{{book.title}}</h4>
+                                <p class="card-text text-nowrap overflow-hidden text-truncate" style="max-width:100%;">
+                                    {{book.description}}</p>
+                                <a href="/cart/{{book.id}}/" class="btn btn-success" type="button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                                         viewBox="0 0 16 16" class="bi bi-cart"
+                                         style="width: 20px;height: 20px;font-size: 15px;">
+                                        <path
+                                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z">
+                                        </path>
+                                    </svg>
+                                    Ordenar</a>
+                                <button class="btn btn-primary btn-detail" data-toggle="modal" data-target="#bookModal"
+                                        data-id="{{ book.id }}">Detalles</button>
                             </div>
                         </div>
-                    {% endfor %}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="row ml-4">
+                <div class="col-12">
+                    <nav aria-label="...">
+                        <ul class="pagination justify-content-end p-3"> <!-- Utiliza la clase "justify-content-end" aquí -->
+                            {% for i in books_page.paginator.page_range %}
+                                <li class="page-item {% if books_page.number == i %}active{% endif %}">
+                                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </nav>
                 </div>
-            {% endfor %}
-            <div class="row"><nav aria-label="...">
-                <ul class="pagination pagination-sm">
-                    {% if books_page.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page=1">Primera</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ books_page.previous_page_number }}">Anterior</a>
-                        </li>
-                    {% endif %}
-
-                    <li class="page-item active" aria-current="page">
-                        <span class="page-link">{{ books_page.number }}</span>
-                    </li>
-
-                    {% if libros_pagina.has_next %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ books_page.next_page_number }}">Siguiente</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ books_page.paginator.num_pages }}">Última</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </nav>
-
             </div>
 
         </div>
+
     </section>
 
     {% include "includes/footer.html" %}
