--- a/cervantes/templates/includes/navbar.html
+++ b/cervantes/templates/includes/navbar.html
@@ -25,7 +25,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item " href="#">Ver Carrito</a>
+                            <a class="dropdown-item " href="/cart">Ver Carrito</a>
                             <a class="dropdown-item " href="{% url 'user:logout' %}">Salir</a>
                         </div>
                     </li>
