--- a/cervantes/templates/dashboard/cart_with_book.html
+++ b/cervantes/templates/dashboard/cart_with_book.html
@@ -14,46 +14,24 @@
 
     <section class="page-section cta">
             <div class="container">
-                <div class="text-end mb-4 ">
-                <h1>Carrito de Compras</h1>
-                </div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col-5"><h5>Libro</h5></th>
-                        <th scope="col-2"><h5>Precio</h5></th>
-                        <th scope="col-2"><h5>Cantidad</h5></th>
-                        <th scope="col-3"><h5>Total</h5></th>
-                    </tr>
-                </thead>
                 <tbody>
-                    {% for object in books%}
-                    {%for book in book%}
-                    <tr>
-                        <th scope="row">
+                    {%for book in books%}
+                    <h1>Haz agregado {{book.title}} a tu Carrito de Compras</h1>
+
                             <div class="ref-preview flex">
                                 <img class="ref-image active mt-2 form-img" src="{{book.img.url}}" data-reflow-preview-type="image" />
                                 <div class="ms-2">
-                                    <p class="mt-3">Libro: {{b.title}}</p>
+                                    <p class="mt-3">Libro: {{book.title}}</p>
                                     <p class="mt-3">Categoria: {{book.category}}</p>
+                                    <p class="mt-3">Precio: {{book.price}}</p>
                                 </div>
                             </div>
-                        </th>
-                        <td><h5 class="mt-3">{{book.price}}</h5></td>
-                        <td> <input id="price" class="form-control" type="number" name="price" value="1" readonly/></td>
-                        <td><h5 class="mt-3">{{book.price}}</h5></td>
-                    </tr>
-                    {% endfor %}
-                    {% endfor %}
 
-                </tbody>
-            </table>
+                    {% endfor %}
 
             <div class="mt-3">
-                <a class="btn btn-success" id="abrirModal" href="">Adquirir</a>
-                <div class="text-end">
-                <a class="btn btn-danger" href="/books">Cancelar</a>
-                </div>
+                <a class="btn btn-success" id="abrirModal" href="/cart">Ver Carrito</a>
+                <a class="btn btn-warning" href="/books">Seguir comprando</a>
             </div>
 
             </div>
