--- a/cervantes/templates/dashboard/cart_with_book.html
+++ b/cervantes/templates/dashboard/cart_with_book.html
@@ -16,14 +16,15 @@
             <div class="container">
                 <tbody>
                     {%for book in books%}
-                    <h1>Haz agregado {{book.title}} a tu Carrito de Compras</h1>
+                    <h1><b>Haz añadido {{book.title}} a tu carrito de compras</b></h1>
 
                             <div class="ref-preview flex">
                                 <img class="ref-image active mt-2 form-img" src="{{book.img.url}}" data-reflow-preview-type="image" />
                                 <div class="ms-2">
-                                    <p class="mt-3">Libro: {{book.title}}</p>
-                                    <p class="mt-3">Categoria: {{book.category}}</p>
-                                    <p class="mt-3">Precio: {{book.price}}</p>
+                                    <h5 class="mt-3"><b>Libro:</b> {{book.title}}</h5>
+                                    <h5 class="mt-3"><b>Autor:</b> {{book.author}}</h5>
+                                    <h5 class="mt-3"><b>Categoria:</b> {{book.category}}</h5>
+                                    <h5 class="mt-3"><b>Precio:</b> {{book.price}}</p>
                                 </div>
                             </div>
 
