agrego al carrito cantidad, subtotal y total

--- a/cervantes/templates/dashboard/cart.html
+++ b/cervantes/templates/dashboard/cart.html
@@ -26,7 +26,7 @@
                     <th scope="col-5"><h5>Libro</h5></th>
                     <th scope="col-2"><h5>Precio</h5></th>
                     <th scope="col-2"><h5>Cantidad</h5></th>
-                    <th scope="col-3"><h5>Total</h5></th>
+                    <th scope="col-3"><h5>Subtotal</h5></th>
                 </tr>
             </thead>
             <tbody>
@@ -70,8 +70,8 @@
     {% endfor %}
 
     <tr>
-        <th><h3>Total: </h3></th>
-        <td></td>
+        <th></th>
+        <td><h3>Total: </h3></td>
         <td>
             <span class="input-group-text">{{total}}</span>
         </td>
