--- a/cervantes/templates/dashboard/books_speciality.html
+++ b/cervantes/templates/dashboard/books_speciality.html
@@ -20,7 +20,7 @@
 
             <div class="card-group mt-3 mb-3">
                 {% for book in books_page %}
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="card h-80 me-3 pt-3 mt-5">
                             <img class="card-img-top j-100 h-50 d-block img_card mb-2" src="{{book.img.url}}" />
                             <div class="card-body">
