--- a/cervantes/templates/dashboard/books.html
+++ b/cervantes/templates/dashboard/books.html
@@ -54,7 +54,7 @@
                 <div class="card-group mb-3">
 
                     {% for book in category.books.all|slice:":3"%}
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <div class="card h-80 me-3 mb-3 mt-3 pt-4">
                                 <img class="card-img-top j-100 h-50 d-block img_card" src="{{book.img.url}}" />
                                 <div class="card-body">
