Agregando order y order detalles

--- a/cervantes/templates/dashboard/cart.html
+++ b/cervantes/templates/dashboard/cart.html
@@ -86,7 +86,7 @@
     <div class="input-group mb-3 ">
     </div>
     
-        <a class="btn btn-success" id="abrirModal" href="/form">Adquirir</a>
+        <a class="btn btn-success" id="abrirModal" href="{% url 'bookstore:create_order' %}">Adquirir</a>
         <a class="btn btn-danger" href="/books">Cancelar</a>
     </div>
 
