--- a/cervantes/templates/dashboard/cart_with_book.html
+++ b/cervantes/templates/dashboard/cart_with_book.html
@@ -24,7 +24,7 @@
                                     <h5 class="mt-3"><b>Libro:</b> {{book.title}}</h5>
                                     <h5 class="mt-3"><b>Autor:</b> {{book.author}}</h5>
                                     <h5 class="mt-3"><b>Categoria:</b> {{book.category}}</h5>
-                                    <h5 class="mt-3"><b>Precio:</b> {{book.price}}</p>
+                                    <h5 class="mt-3"><b>Precio:</b> {{book.price}}</h5>
                                 </div>
                             </div>
 
