--- a/cervantes/templates/includes/navbar.html
+++ b/cervantes/templates/includes/navbar.html
@@ -14,21 +14,17 @@
                     </path>
                 </svg>&nbsp;libros</a></li>
                 <li class="nav-item"><a class="nav-link" href="/cart"><svg xmlns="http://www.w3.org/2000/svg"
-                                                                           width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart"
-                                                                           style="width: 20px;height: 20px;font-size: 15px;">
+                                                                        width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cart"
+                                                                        style="width: 20px;height: 20px;font-size: 15px;">
                     <path
                             d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z">
                     </path>
-                </svg>&nbsp;Carrito <span class="badge rounded-pill bg-danger">
-    99+
-    <span class="visually-hidden">unread messages</span>
-  </span></a>
+                </svg>&nbsp;Carrito </a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item " href="#">Ver Carrito </a>
                             <a class="dropdown-item " href="/cart">Ver Carrito</a>
                             <a class="dropdown-item " href="{% url 'user:logout' %}">Salir</a>
                         </div>
