--- a/cervantes/templates/dashboard/index.html
+++ b/cervantes/templates/dashboard/index.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
 
+{% block title %} Inicio {% endblock %}
+
+
+{% block head %}
+{% endblock %}
+
+{% block header %}
+{% endblock %}
+
+{% block navbar %}
+{% endblock %}
+
+{% block sidebar %}
+{% endblock %}
+
+{% block scripts %}
+{% endblock %}
+
 {% block estilos %}
 {% endblock %}
 
